--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-measure": "^2.0.2",
     "recharts": "^1.0.0-alpha.0",
+    "sprintf-js": "^1.1.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "cross-env": "^5.0.0",
     "react-scripts": "1.0.7"
   },
   "scripts": {
